# rippy

./: LICENSE  README.md  example.py  pyproject.toml  pytest.ini  requirements-gpu.txt  requirements.txt  setup.py
docs/source/: conf.py  index.rst  modules.rst  usage.rst
docs/source/api/: rippy.Contracts.ContractResults.rst  rippy.Contracts.XoL.rst  rippy.Contracts.XoLTower.rst  rippy.Distributions.Burr.rst  rippy.Distributions.DiscreteDistribution.rst  rippy.Distributions.Distribution.rst  rippy.Distributions.GPD.rst  rippy.Distributions.LogLogistic.rst  rippy.Distributions.NegBinomial.rst  rippy.Distributions.Normal.rst  rippy.Distributions.ParaLogistic.rst  rippy.Distributions.Pareto.rst  rippy.Distributions.Poisson.rst  rippy.FrequencySeverity.FreqSevSims.rst  rippy.FrequencySeverity.FrequencySeverityModel.rst  rippy.XoL.ContractResults.rst  rippy.XoL.XoL.rst  rippy.XoL.XoLTower.rst  rippy.config.config.rst  rippy.config.set_default_n_sims.rst  rippy.config.set_random_seed.rst
rippy/: Contracts.py  Distributions.py  FreqSevModel.py  FreqSevSims.py  FrequencySeverity.py  XoL.py  __init__.py  config.py  stats.py
tests/: test_FreqSev.py  test_FrequencySeverity.py  test_distributions.py  test_example.py  test_xol.py
